done viewer build 240725_1849

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,14 @@ add_compile_options(-DHAVE_CSTDDEF)
 add_definitions(-DMASS_ROOT_DIR="..")
 set(CMAKE_MODULE_PATH "${CMAKE_HOME_DIRECTORY}/cmake")
 
-set(PYTHON_LIBRARY "/home/wonjeong/anaconda3/envs/GaitNet/lib/libpython3.6m.so")
-set(PYTHON_INCLUDE_DIR "/home/wonjeong/anaconda3/envs/GaitNet/include/python3.6m")
-list(APPEND CMAKE_PREFIX_PATH "/home/wonjeong/anaconda3/envs/GaitNet")
-# list(APPEND CMAKE_PREFIX_PATH "/home/wonjeong/anaconda3/envs/GaitNet/lib/python3.6/site-packages/pybind11/share/cmake/pybind11")
+# set(PYTHON_LIBRARY "/home/wonjeong/anaconda3/envs/testGaitNet/lib/libpython3.6m.so")
+# set(PYTHON_INCLUDE_DIR "/home/wonjeong/anaconda3/envs/testGaitNet/include/python3.6m")
+# list(APPEND CMAKE_PREFIX_PATH "/home/wonjeong/anaconda3/envs/testGaitNet")
+list(APPEND CMAKE_PREFIX_PATH "/home/wonjeong/anaconda3/envs/testGaitNet/lib/python3.6/site-packages/")
+set(PYPACKPATH "/home/wonjeong/anaconda3/envs/testGaitNet/lib/python3.6/site-packages/")
+if(NOT EXISTS ${PYPACKPATH})
+message(FATAL_ERROR "PYPACKPATH does not exist: ${PYPACKPATH}")
+endif()
 # set(pybind11_DIR "/home/wonjeong/anaconda3/envs/GaitNet/lib/python3.6/site-packages/pybind11/share/cmake/pybind11")
 find_package(pybind11 REQUIRED)
 include_directories(${pybind11_INCLUDE_DIRS})
@@ -31,8 +35,8 @@ include_directories(${pybind11_INCLUDE_DIRS})
 find_package(DART REQUIRED COMPONENTS gui CONFIG)
 # if(SERVER_BUILD)
 
-# find_package(PythonLibs 3.6 EXACT REQUIRED)
-# find_package(PythonInterp 3.6 EXACT REQUIRED)
+find_package(PythonLibs 3.6 EXACT REQUIRED)
+find_package(PythonInterp 3.6 EXACT REQUIRED)
 
 # endif()
 
