fix CMakeLists, shell, jason for debug and build release version 240726_0830

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,12 @@ set(CMAKE_MODULE_PATH "${CMAKE_HOME_DIRECTORY}/cmake")
 # set(PYTHON_INCLUDE_DIR "/home/wonjeong/anaconda3/envs/testGaitNet/include/python3.6m")
 # list(APPEND CMAKE_PREFIX_PATH "/home/wonjeong/anaconda3/envs/testGaitNet")
 list(APPEND CMAKE_PREFIX_PATH "/home/wonjeong/anaconda3/envs/testGaitNet/lib/python3.6/site-packages/")
-set(PYPACKPATH "/home/wonjeong/anaconda3/envs/testGaitNet/lib/python3.6/site-packages/")
-if(NOT EXISTS ${PYPACKPATH})
-message(FATAL_ERROR "PYPACKPATH does not exist: ${PYPACKPATH}")
-endif()
+
+# set(PYPACKPATH "/home/wonjeong/anaconda3/envs/testGaitNet/lib/python3.6/site-packages/")
+# if(NOT EXISTS ${PYPACKPATH})
+# message(FATAL_ERROR "PYPACKPATH does not exist: ${PYPACKPATH}")
+# endif()
+
 # set(pybind11_DIR "/home/wonjeong/anaconda3/envs/GaitNet/lib/python3.6/site-packages/pybind11/share/cmake/pybind11")
 find_package(pybind11 REQUIRED)
 include_directories(${pybind11_INCLUDE_DIRS})
